/*
 * Copyright (c) 2018 Thapovan info Systems
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;

package com.thapovan.orion.proto;

import "Trace.proto";
import "Events.proto";

message Span {
    Trace trace_context = 1;
    string span_id = 2;
    oneof event {
        StartEvent start_event = 3;
        EndEvent end_event = 4;
        LogEvent log_event = 5;
    }
    uint64 timestamp  = 6;
    string service_name = 7;
    string event_location = 8;
    string parent_span_id = 9;

    uint64 internal_span_ref_number = 10000;
}